--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,9 +1,18 @@
-<div class="form-inline">
-  <div class="form group mb-2">
-    <input type="text" class="form-control mr-2" placeholder="buscar"
-    [(ngModel)]="filtroLista">
+<div class="d-flex">
+  <div class="form-inline mr-auto">
+    <div class="form group mb-2">
+      <input type="text" class="form-control mr-2" placeholder="buscar"
+      [(ngModel)]="filtroLista">
+    </div>
+  </div>
+  <div>
+    <button class="btn btn-outline-primary" (click)="novoEvento(template)">
+      <i class="fa fa-plus-circle"></i>
+      Novo Evento
+    </button>
   </div>
 </div>
+
 <table class="table table-striped">
   <thead class="thead-dark">
     <tr>
@@ -41,7 +50,7 @@
       <td>
         <div class="btn-group">
           <button class="btn btn-sm btn-success"
-            tooltip="Editar" (click)="openModal(template)">
+            tooltip="Editar" (click)="editarEvento(evento, template)">
             <i class="fa fa-edit"></i>
           </button>
           <button class="btn btn-sm btn-danger"  tooltip="Excluir">
@@ -60,15 +69,91 @@
   </tfoot>
 </table>
 
-<ng-template #template>
-  <div class="modal-header">
-    <h4 class="modal-title pull-left">Modal</h4>
-    <button type="button" class="close pull-right"
-    aria-label="Close" (click)="modalRef.hide()">
-    <span aria-hidden="true">&times;</span>
-  </button>
+<div bsModal #template="bs-modal" class="modal fade" tabindex="-1"
+     role="dialog" aria-labelledby="dialog-sizes-name1">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 id="dialog-sizes-name1" class="modal-title pull-left">Large modal</h4>
+        <button type="button" class="close pull-right" (click)="template.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup] = "registerForm">
+          <div class="form-row">
+            <div class="form-group col-md-12">
+              <label>Tema</label>
+              <input type="text" class="form-control is-invalid"
+              formControlName = "tema" placeholder="Insira o Tema">
+              <div class="invalid-feedback">
+                O tema é obrigatório
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label>Local</label>
+              <input type="text" class="form-control is-invalid" formControlName = "local">
+              <div class="invalid-feedback">
+                O local é obrigatório
+              </div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Data e Hora</label>
+              <input type="text" class="form-control"
+
+              formControlName = "dataEvento">
+              <div class="invalid-feedback">
+                A data é obrigatória
+              </div>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-3">
+              <label>Qtd Pessoas</label>
+              <input type="text" class="form-control is-invalid" formControlName = "qtdPessoas">
+              <div class="invalid-feedback">
+                A quantidade de pessoas é obrigatória
+              </div>
+            </div>
+            <div class="form-group col-md-9">
+              <label>Imagem</label>
+              <input type="text" class="form-control is-invalid"formControlName = "imagemURL">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-8">
+              <label>Telefone</label>
+              <input type="text" class="form-control is-invalid"formControlName = "telefone">
+              <div class="invalid-feedback">
+                O telefone é obrigatório
+              </div>
+            </div>
+            <div class="form-group col-md-4">
+              <label>Email</label>
+              <input type="text" class="form-control is-invalid"formControlName = "email">
+              <div class="invalid-feedback">
+                O email é obrigatório
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer d-flex">
+        <button class="btn btn-secondary" (click)="template.hide()">
+          Fechar
+        </button>
+        <button class="btn btn-primary ml-auto" (click)="salvarAlteracao(template)">
+          Salvar Alterações
+        </button>
+      </div>
+    </div>
+  </div>
 </div>
-<div class="modal-body">
-  This is a modal.
-</div>
-</ng-template>
+
+
+
+
+
+
