--- a/ProAgil-App/src/app/eventos/eventos.component.html
+++ b/ProAgil-App/src/app/eventos/eventos.component.html
@@ -1,3 +1,4 @@
+<app-titulo [titulo]="titulo"></app-titulo>
 <div class="d-flex">
   <div class="form-inline mr-auto">
     <div class="form group mb-2">
@@ -36,7 +37,7 @@
       </td>
       <td>{{evento.tema}}</td>
       <td>{{evento.local}}</td>
-      <td>{{evento.dataEvento | DateTimeFormatPipe }}</td>
+      <td>{{evento.dataEvento}}</td>
       <td>{{evento.qtdPessoas}}</td>
       <td>
         <div *ngIf="!evento.lotes.length">
@@ -53,14 +54,15 @@
             tooltip="Editar" (click)="editarEvento(evento, template)">
             <i class="fa fa-edit"></i>
           </button>
-          <button class="btn btn-sm btn-danger"  tooltip="Excluir">
+          <button class="btn btn-sm btn-danger"  tooltip="Excluir"
+            (click)="excluirEvento(evento, confirm)">
             <i class="fa fa-eraser"></i>
           </button>
         </div>
       </td>
     </tr>
   </tbody>
-  <tfoot *ngIf="!eventos.length">
+  <tfoot *ngIf="!eventos">
     <tr>
       <td colspan="7" class="text-center">
         <h5>Nenhum evento encontrado</h5>
@@ -84,7 +86,7 @@
           <div class="form-row">
             <div class="form-group col-md-12">
               <label>Tema</label>
-              <input type="text" class="form-control is-invalid"
+              <input type="text" class="form-control"
               formControlName = "tema" placeholder="Insira o Tema">
               <div class="invalid-feedback">
                 O tema é obrigatório
@@ -94,7 +96,7 @@
           <div class="form-row">
             <div class="form-group col-md-8">
               <label>Local</label>
-              <input type="text" class="form-control is-invalid" formControlName = "local">
+              <input type="text" class="form-control" formControlName = "local">
               <div class="invalid-feedback">
                 O local é obrigatório
               </div>
@@ -112,27 +114,27 @@
           <div class="form-row">
             <div class="form-group col-md-3">
               <label>Qtd Pessoas</label>
-              <input type="text" class="form-control is-invalid" formControlName = "qtdPessoas">
+              <input type="text" class="form-control" formControlName = "qtdPessoas">
               <div class="invalid-feedback">
                 A quantidade de pessoas é obrigatória
               </div>
             </div>
             <div class="form-group col-md-9">
               <label>Imagem</label>
-              <input type="text" class="form-control is-invalid"formControlName = "imagemURL">
+              <input type="text" class="form-control"formControlName = "imagemURL">
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-8">
               <label>Telefone</label>
-              <input type="text" class="form-control is-invalid"formControlName = "telefone">
+              <input type="text" class="form-control"formControlName = "telefone">
               <div class="invalid-feedback">
                 O telefone é obrigatório
               </div>
             </div>
             <div class="form-group col-md-4">
               <label>Email</label>
-              <input type="text" class="form-control is-invalid"formControlName = "email">
+              <input type="text" class="form-control"formControlName = "email">
               <div class="invalid-feedback">
                 O email é obrigatório
               </div>
@@ -144,7 +146,7 @@
         <button class="btn btn-secondary" (click)="template.hide()">
           Fechar
         </button>
-        <button class="btn btn-primary ml-auto" (click)="salvarAlteracao(template)">
+        <button class="btn btn-primary ml-auto"  (click)="salvarAlteracao(template)">
           Salvar Alterações
         </button>
       </div>
@@ -152,8 +154,29 @@
   </div>
 </div>
 
-
-
-
-
+<div bsModal #confirm="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dialog-sizes-name1">
+	<div class="modal-dialog modal-sm">
+  		<div class="modal-content">
+    		<div class="modal-header">
+      			<h4 class="modal-title pull-left">
+        			Deletando Evento
+      			</h4>
+      			<button type="button" class="close pull-right" (click)="confirm.hide()" aria-label="Close">
+        			<span aria-hidden="true">&times;</span>
+      			</button>
+    		</div>
+    		<div class="modal-body">
+      			<p>{{bodyDeletarEvento}}</p>
+    		</div>
+    		<div class="modal-footer btn-group d-flex">
+      			<button type="button" class="btn btn-outline-primary" (click)="confirm.hide()">
+        			CANCELAR
+      			</button>
+      			<button type="button" class="btn btn-outline-danger" (click)="confirmeDelete(confirm)">
+          			DELETAR
+        		</button>
+    		</div>
+  		</div>
+	</div>
+</div>
 
